# ScholarPath

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  ai_college_advisor_spec.md  alembic.ini  docker-compose.yml  entrypoint.sh  package.json  pyproject.toml  quick_start.md
.github/workflows/: playwright-full-regression.yml
alembic/: env.py
alembic/versions/: 0f346a1591c2_add_offer_cost_breakdown_fields.py  6ad5f6e44f11_add_causal_runtime_assets.py  9b8d1e8af11f_add_advisor_memory_layers.py  9c3a7d2b1e42_add_causal_data_pipeline_tables.py  a1b2c3d4e5f6_add_program_to_offers.py  b2c3d4e5f6a7_add_residency_and_tuition_tiers.py  b7f0b5e2d6c1_add_metadata_to_causal_feature_snapshots.py  c3d2a4e9b7f1_add_phase2_official_fact_tables.py  c3d4e5f6a7b8_rename_residency_to_citizenship.py  d4e5f6a7b8c9_add_degree_level_to_students.py  e1c4d93af5c2_add_external_ids_and_trend_signals.py  e5f6a7b8c9d0_add_metro_area_profiles_table.py  f2a1c6b9d4e8_add_admission_phase1_bronze_silver_tables.py  f6a7b8c9d0e1_add_school_claims_table.py  f92bd95b5f23_add_users_table_and_student_user_id_fk.py  g1a2b3c4d5e6_add_qs_forbes_rankings.py
frontend/: Dockerfile  README.md  index.html  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: advisor.contract-audit.live.spec.ts  advisor.contract.spec.ts  advisor.legacy-probe.live.spec.ts  advisor.live.spec.ts
frontend/scripts/: capture-landing-shots.mjs
project/: beecode_json_methodology.md  recommendation_low_score_case_study_20260407.md  scholarpath_architecture_gateway_v2.md  xcode_json_methodology.md
scholarpath/: config.py  exceptions.py  init_db.py  language.py  main.py
scripts/: add_more_schools.py  collect_community_reviews.py
tests/: conftest.py  fake_redis.py  test_admission_data_phase1_pipeline.py  test_admission_data_phase2.py  test_admission_data_phase4_training_prep.py  test_admission_truth_public_cleanup_global.py  test_admission_truth_public_collegeconfidential.py  test_admission_truth_public_reddit.py  test_admission_truth_public_shared.py  test_advisor_adapters.py  test_advisor_contracts.py  test_advisor_edit_overwrite.py  test_advisor_memory_context.py  test_advisor_orchestrator.py  test_advisor_orchestrator_judge.py  test_advisor_orchestrator_live_eval.py  test_advisor_output_polisher.py  test_advisor_route_errors.py  test_advisor_ux_judge.py  test_advisor_ux_live_eval.py  test_api.py  test_causal_activate_pywhy.py  test_causal_data_api.py  test_causal_data_service.py  test_causal_engine.py  test_causal_gold_eval.py  test_causal_judge.py  test_causal_promote_if_ready.py  test_causal_quality_fixes.py  test_causal_real_asset_service.py  test_causal_rollout_quality.py  test_causal_runtime.py  test_causal_scoring_v2.py  test_causal_stage1_breakthrough.py  test_causal_staged_train.py  test_causal_training.py  test_causal_v2_module.py  test_celery_causal_schedule.py  test_chat_memory_v2.py  test_chat_orchestrator_v2.py  (+29 more)
(+328 files in other folders)
