[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scholarpath"
version = "0.1.0"
description = "ScholarPath - AI-powered academic pathway planning"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "alembic",
    "pgvector",
    "networkx",
    "numpy",
    "openai",
    "httpx",
    "pydantic-settings",
    "tenacity",
    "python-dotenv",
    "redis[hiredis]",
    "celery[redis]",
    "websockets",
    "sse-starlette",
    "google-genai",
    "pyjwt",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-xdist",
    "pytest-cov",
    "httpx",
    "fakeredis",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 99
